--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-native-floating-hearts": "0.0.9",
     "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
